# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./members";
 export * from "./grievances";
 export * from "./announcements";
+export * from "./documents";
